[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://ice_spear.gd" id="1"]
[ext_resource type="PackedScene" path="res://Utils/hit_box.tscn" id="2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ice"]
animations = []

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ice"]
size = Vector2(16, 6)

[node name="IceSpear" type="Area2D"]
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ice")

[node name="HitBox" parent="." instance=ExtResource("2")]

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource("RectangleShape2D_ice")

[node name="LifetimeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]

[editable path="HitBox"]
